--- a/DotNetFrameworkDllExporter/DotNetFrameworkDllExporter/DotNetFrameworkDllExporter.csproj
+++ b/DotNetFrameworkDllExporter/DotNetFrameworkDllExporter/DotNetFrameworkDllExporter.csproj
@@ -53,6 +53,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DLLExporter.cs" />
+    <Compile Include="MainResources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MainResources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Namespace.cs" />
     <Compile Include="Namespace.NamespaceBuilder.cs" />
     <Compile Include="Namespace.NamespaceXmlPrinter.cs" />
@@ -73,6 +78,15 @@
   <ItemGroup>
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="MainResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>MainResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\AssemblyDtd.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
