Multiple improvement and refactoring

--- a/DotNetFrameworkDllExporter/DotNetFrameworkExampleDll/DotNetFrameworkExampleDll.csproj
+++ b/DotNetFrameworkDllExporter/DotNetFrameworkExampleDll/DotNetFrameworkExampleDll.csproj
@@ -23,6 +23,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>..\..\GeneralCode.ruleset</CodeAnalysisRuleSet>
+    <LangVersion>5</LangVersion>
+    <DocumentationFile>bin\Debug\DotNetFrameworkExampleDll.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
