--- a/DotNetFrameworkDllExporter/DotNetFrameworkDllExporter/DotNetFrameworkDllExporter.csproj
+++ b/DotNetFrameworkDllExporter/DotNetFrameworkDllExporter/DotNetFrameworkDllExporter.csproj
@@ -28,6 +28,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>..\..\GeneralCode.ruleset</CodeAnalysisRuleSet>
+    <DocumentationFile>bin\Debug\DotNetFrameworkDllExporter.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -60,11 +61,11 @@
       <DependentUpon>MainResources.resx</DependentUpon>
     </Compile>
     <Compile Include="Namespace.cs" />
-    <Compile Include="Namespace.NamespaceBuilder.cs" />
+    <Compile Include="NamespaceBuilder.cs" />
     <Compile Include="XmlPrinter\EntityIdPrinter.cs" />
-    <Compile Include="XmlPrinter\Namespace.NamespaceXmlPrinter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XmlPrinter\NamespaceXmlPrinter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
