--- a/DotNetFrameworkDllExporter/DotNetFrameworkDllExporterTests/DotNetFrameworkDllExporterTests.csproj
+++ b/DotNetFrameworkDllExporter/DotNetFrameworkDllExporterTests/DotNetFrameworkDllExporterTests.csproj
@@ -31,6 +31,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>..\..\Tests.ruleset</CodeAnalysisRuleSet>
+    <DocumentationFile>bin\Debug\DotNetFrameworkDllExporterTests.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
